--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DoseApp"
+        android:theme="@style/Theme.ReminderApp"
         android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
         <activity
             android:name="com.tanvir.reminder.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.DoseApp">
+            android:theme="@style/Theme.ReminderApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
