--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,7 +53,6 @@ compose-ui-tooling-debug = { group="androidx.compose.ui", name="ui-tooling", ver
 compose-ui-test-manifest = { group="androidx.compose.ui", name="ui-test-manifest", version.ref="compose" }
 compose-ui = { group="androidx.compose.ui", name="ui", version.ref="compose" }
 # Firebase
-firebase-analytics = { group="com.google.firebase", name="firebase-analytics" }
 firebase-crashlytics = { group="com.google.firebase", name="firebase-crashlytics" }
 firebase-bom = { group="com.google.firebase", name="firebase-bom", version.ref="firebase" }
 # Gson
@@ -70,23 +69,13 @@ lifecycle-viewmodel-compose = { group="androidx.lifecycle", name="lifecycle-view
 okhttp = { group="com.squareup.okhttp3", name="okhttp" }
 okhttp-logging-interceptor = { group="com.squareup.okhttp3", name="logging-interceptor" }
 okhttp-bom = { group="com.squareup.okhttp3", name="okhttp-bom", version.ref="okhttp" }
-
-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
-retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitVersion" }
-retrofit2-kotlin-coroutines-adapter = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "retrofit2KotlinCoroutinesAdapter" }
-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "converterMoshi" }
-
-kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
-
-moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
-moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshiAdapters" }
-moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
-
+android-retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofitVersion" }
 # Room
 room-runtime = { group="androidx.room", name="room-runtime", version.ref="room"}
 room-ktx = { group="androidx.room", name="room-ktx", version.ref="room"}
 room-compiler = { group="androidx.room", name="room-compiler", version.ref="room"}
+gson-converter = { group="com.squareup.retrofit2", name="converter-gson", version.ref="retrofitVersion"}
+
 # Tests
 junit = { group="junit", name="junit", version.ref="junit" }
 junit-ext = { group="androidx.test.ext", name="junit", version.ref="junitExt" }
